--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sort Visualization</title>
-    <link rel="stylesheet" href="../src/style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <audio src="" loop></audio>
@@ -33,5 +33,5 @@
         </div>
     </main>
 </body>
-<script type="module" src="../src/script.js"></script>
+<script type="module" src="src/script.js"></script>
 </html>
