--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sort Visualization</title>
-    <link rel="stylesheet" href="/docs/style.css">
+    <link rel="stylesheet" href="https://amanofhonestfate.github.io/sort-visualizer/docs/style.css">
 </head>
 <body>
     <audio src="" loop></audio>
