--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
         </div>
     </main>
 </body>
-<script type="module" src="/docs/script.js"></script>
+<script type="module" src="https://amanofhonestfate.github.io/sort-visualizer/docs/script.js"></script>
 </html>
